# insiders_clustering

./: README.md  pyproject.toml  requirements.txt
notebooks/: c5.0-ls-clustering-modeling.ipynb  c6.0-ls-model-performance.ipynb  c7.0-ls-model-result.ipynb  c8.0-ls-eda.ipynb  v1.0-ls-insiders_clustering.ipynb
