[tool.poetry]
name = "insiders_clustering"
version = "0.1.0"
description = ""
authors = ["Laurivan <laurivansareta@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.2"
pandas = "^1.4.4"
seaborn = "^0.12.0"
inflection = "^0.5.1"
sweetviz = "^2.1.4"
matplotlib = "^3.5.3"
sklearn = "^0.0"
umap-learn = "^0.5.3"
plotly = "^5.10.0"
yellowbrick = "^1.5"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
